User Profile Foundations

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,7 +5,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".ui.fragments.main.user.SignUpFragment">
+	tools:context=".ui.fragments.main.login.SignUpFragment">
 	
 	<ScrollView
 		android:layout_width="match_parent"
