--- a/app/src/main/res/layout/fragment_user_followers.xml
+++ b/app/src/main/res/layout/fragment_user_followers.xml
@@ -7,12 +7,13 @@
 	android:layout_height="match_parent">
 	
 	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/followers_recylerView"
+		android:id="@+id/followers_recyclerView"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"/>
+		app:layout_constraintTop_toTopOf="parent"
+		tools:listitem="@layout/row_followers_layout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
