--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -52,6 +52,15 @@
 			app:argType="string"/>
 	</fragment>
 	<fragment
+		android:id="@+id/item_post_detail"
+		android:name="com.rainbowwolfer.myspacedemo1.ui.fragments.main.home.postDetail.PostDetailFragment"
+		android:label="Post"
+		tools:layout="@layout/fragment_post_detail">
+		<argument
+			android:name="post_id"
+			app:argType="string"/>
+	</fragment>
+	<fragment
 		android:id="@+id/nav_settings"
 		android:name="com.rainbowwolfer.myspacedemo1.ui.fragments.main.settings.SettingsFragment"
 		android:label="Settings"/>
