--- a/app/src/main/res/xml/fragment_post_detail_comments_scene.xml
+++ b/app/src/main/res/xml/fragment_post_detail_comments_scene.xml
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:motion="http://schemas.android.com/apk/res-auto">
-
-    <Transition
-        motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@id/start"
-        motion:duration="100">
-       <KeyFrameSet>
-       </KeyFrameSet>
-    </Transition>
-
-    <ConstraintSet android:id="@+id/start">
-	    <Constraint
-		    android:id="@+id/postDetail_layout_loading"
-		    motion:layout_constraintEnd_toEndOf="parent"
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    motion:layout_constraintTop_toTopOf="parent"
-		    motion:layout_constraintStart_toStartOf="parent"
-		    android:alpha="1"/>
-    </ConstraintSet>
-
-    <ConstraintSet android:id="@+id/end">
-	    <Constraint
-		    android:id="@+id/postDetail_layout_loading"
-		    motion:layout_constraintEnd_toEndOf="parent"
-		    android:layout_width="match_parent"
-		    android:layout_height="1dp"
-		    motion:layout_constraintTop_toTopOf="parent"
-		    motion:layout_constraintStart_toStartOf="parent"
-		    android:alpha="0"/>
-    </ConstraintSet>
+<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:motion="http://schemas.android.com/apk/res-auto">
+	
+	<Transition
+		motion:constraintSetEnd="@+id/end"
+		motion:constraintSetStart="@id/start"
+		motion:duration="100">
+		<KeyFrameSet></KeyFrameSet>
+	</Transition>
+	
+	<ConstraintSet android:id="@+id/start">
+		<Constraint
+			android:id="@+id/postDetail_layout_loading"
+			motion:layout_constraintEnd_toEndOf="parent"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			motion:layout_constraintTop_toTopOf="parent"
+			motion:layout_constraintStart_toStartOf="parent"
+			android:alpha="1"/>
+	</ConstraintSet>
+	
+	<ConstraintSet android:id="@+id/end">
+		<Constraint
+			android:id="@+id/postDetail_layout_loading"
+			motion:layout_constraintEnd_toEndOf="parent"
+			android:layout_width="match_parent"
+			android:layout_height="1dp"
+			motion:layout_constraintTop_toTopOf="parent"
+			motion:layout_constraintStart_toStartOf="parent"
+			android:alpha="0"/>
+	</ConstraintSet>
 </MotionScene>
